netpol/2.network.policy.allow-mongo-mongo.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow.mongo.from.mongo
  namespace: cloudacademy
spec:
  podSelector:
    matchLabels:
      app: mongo
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: mongo
