netpol/3.network.policy.allow-mongo-api.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-mongo-api
  namespace: cloudacademy
spec:
  podSelector:
    matchLabels:
      role: mongo
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: api
