netpol/network.policy.allow-api-frontend.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-api-frontend
  namespace: cloudacademy
spec:
  podSelector:
    matchLabels:
      app: api
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: frontend
