netpol/network.policy.allow-mongo-mongo.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-mongo-mongo
  namespace: cloudacademy
spec:
  podSelector:
    matchLabels:
      role: mongo
  ingress:
  - from:
      - podSelector:
          matchLabels:
            role: mongo
